--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[tool.poetry]
+package-mode = false
+
+[tool.poetry.group.dev.dependencies]
+xlrd = "^2.0.2"
+
 [project]
 name = "sandbox"
 version = "0.1.0"
@@ -16,4 +22,5 @@ dependencies = [
     "scipy>=1.15.1",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
+    "wrds>=3.4.0"
 ]
